--- a/index.html
+++ b/index.html
@@ -135,6 +135,66 @@
       </div>
     </header>
 
+    <!-- EXPLORE HEAD -->
+
+    <section id="explore-head-section">
+      <div class="container">
+        <div class="row">
+          <div class="col text-center py-5">
+            <h1 class="display-4">Explore</h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
+              illum dolor facere nulla vero eum deserunt repellat, quae
+              quibusdam. Consectetur?
+            </p>
+            <a href="" class="btn btn-outline-secondary">Find out more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- EXPLORE SECTION -->
+
+    <section id="explore-section" class="bg-light text-muted py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="img/explore-section1.jpg"
+              alt=""
+              class="img-fluid mb-3 rounded-circle"
+            />
+          </div>
+          <div class="col-md-6">
+            <h3>Explore & Connect</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas rem
+              cum molestias aliquam earum adipisci sapiente hic alias fugiat
+              voluptatem.
+            </p>
+            <div class="d-flex">
+              <div class="p-4 align-self-start">
+                <i class="fas fa-check fa-2x"></i>
+              </div>
+              <div class="p-4 align-self-end">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+                odit possimus, facilis quidem consectetur veritatis neque?
+              </div>
+            </div>
+            <div class="d-flex">
+                    <div class="p-4 align-self-start">
+                      <i class="fas fa-check fa-2x"></i>
+                    </div>
+                    <div class="p-4 align-self-end">
+                      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel
+                      odit possimus, facilis quidem consectetur veritatis neque?
+                    </div>
+                  </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
