--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Bootstrap Theme</title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  <body data-spy="scroll" data-target="#main-nav" id="home">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
       <div class="container">
         <a href="index.html" class="navbar-brand">LoopLAB</a>
         <button
@@ -39,10 +39,10 @@
               <a href="#explore-head-section" class="nav-link">Explore</a>
             </li>
             <li class="nav-item">
-              <a href="#create" class="nav-link">Create</a>
+              <a href="#create-head-section" class="nav-link">Create</a>
             </li>
             <li class="nav-item">
-              <a href="#share" class="nav-link">Share</a>
+              <a href="#share-head-section" class="nav-link">Share</a>
             </li>
           </ul>
         </div>
@@ -314,7 +314,54 @@
             </div>
           </section>
       
+          <!-- FOOTER -->
 
+          <footer id="main-footer" class="bg-dark">
+              <div class="container">
+                  <div class="row">
+                      <div class="col text-center py-4">
+                            <h3>LoopLAB</h3>
+                            <p>Copyright &copy; <span id="year"></span></p>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#contactModal">
+                                Contact Us
+                            </button>
+                      </div>
+                  </div>
+              </div>
+          </footer>
+
+          <!-- CONTACT MODAL -->
+          <div class="modal fade text-dark" id="contactModal">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Contact Us</h5>
+                        <button class="close" data-dismiss="modal">
+                            <span>&times;</span>
+                        </button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                        <label for="email">Email</label>
+                                        <input type="email" class="form-control">
+                                    </div>
+                                    <div class="form-group">
+                                            <label for="message">Message</label>
+                                            <textarea class="form-control"></textarea>
+                                        </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-primary btn-block">Submit</button>
+                        </div>
+                    </div>
+                </div>
+          </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
@@ -329,6 +376,22 @@
     <script>
       // Get the current year for the copyright
       $("#year").text(new Date().getFullYear());
+    // Init scrollspy
+    $('body').scrollspy({taget: '#main-nav'});
+
+    $("#main-nav a").on('click', function (event) {
+        if (this.hash !== "") {
+            event.preventDefault();
+            const hash = this.hash;
+
+            $('html, body').animate({
+                scrollTop: $(hash).offset().top
+            }, 800, function() {
+                window.location.hash = hash;
+            });
+        }
+    });
+
     </script>
   </body>
 </html>
